--- a/fragment/preamble_package.tex
+++ b/fragment/preamble_package.tex
@@ -25,6 +25,7 @@
 \usepackage[colorlinks=true, linkcolor=blue, citecolor=blue, plainpages=false, pdfpagelabels=true, urlcolor=blue]{hyperref}
 \usepackage{float}
 \usepackage{blindtext}
+\usepackage{siunitx}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% For Subfigure alignment and Labeling
