--- a/manuscript_title_etc.tex
+++ b/manuscript_title_etc.tex
@@ -32,9 +32,7 @@ We would like to thank Ali Saffouri for his exceptional work as a research assis
 % 5. Define Abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\PAPERABSTRACT}{
-Suicide is often an impulsive act, and in the United States, nearly one-half of suicides involve a firearm, the most lethal and readily available method. In this paper, using developments in difference-in-differences design, we study the effect of waiting-period laws on firearm suicides and provide the first causal evaluation of such laws. We find that waiting periods reduce firearm suicides for men (-1.3 per 100,000), while the reduction for the overall population (-0.5 per 100,000), adults aged 55 + (-28.5 per 100,000), and white individuals (-23.1 per 100,000) was statistically insignificant. Waiting periods did not cause an increase in non-firearm suicides. The majority of confidence intervals were in the negative range, and the lack of statistically significant estimates does not mean that waiting periods did not cause a decrease in suicides. These findings provide some evidence that even brief delays in firearm access could disrupt the pathway from suicidal ideation to death, suggesting that cooling-off periods may be a crucial policy tool for suicide prevention.
-
-\\
+Suicide is often an impulsive act, and in the United States, nearly one-half of suicides involve a firearm, the most lethal and readily available method. In this paper, using developments in difference-in-differences design, we study the effect of waiting-period laws on firearm suicides and provide the first causal evaluation of such laws. We find that waiting periods reduce firearm suicides for men (-1.3 per 100,000), while the reduction for the overall population (-0.5 per 100,000), adults aged 55 + (-28.5 per 100,000), and white individuals (-23.1 per 100,000) was statistically insignificant. Waiting periods did not cause an increase in non-firearm suicides. The majority of confidence intervals were in the negative range, and the lack of statistically significant estimates does not mean that waiting periods did not cause a decrease in suicides. These findings provide some evidence that even brief delays in firearm access could disrupt the pathway from suicidal ideation to death, suggesting that cooling-off periods may be a crucial policy tool for suicide prevention. \\
 \PAPERJEL}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
