--- a/submit_preprint.tex
+++ b/submit_preprint.tex
@@ -33,9 +33,9 @@
 
 \maketitle
 
-\begin{center}
-\href{https://hhadah.github.io/asian-identity-attrition/my_paper/submit_preprint.pdf}{\footnotesize{Click Here to Get the Most Updated Version}}
-\end{center}
+% \begin{center}
+% \href{https://hhadah.github.io/asian-identity-attrition/my_paper/submit_preprint.pdf}{\footnotesize{Click Here to Get the Most Updated Version}}
+% \end{center}
 
 % \vspace*{-2em}
 \begin{abstract}
